<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PluginActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleCentered="true">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_img_btn"
            android:clickable="true"
            android:contentDescription="@string/dialog_info"
            android:focusable="true"
            android:src="@drawable/outline_info_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        app:layout_constraintBottom_toTopOf="@+id/access_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/config_summary"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/config_path_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/config_path_label"
                app:layout_constraintTop_toBottomOf="@+id/summary"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/config_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textIsSelectable="true"
                app:layout_constraintTop_toBottomOf="@+id/config_path_label" />

            <TextView
                android:id="@+id/path_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/config_path" />

            <TextView
                android:id="@+id/backend_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/backend_label"
                app:layout_constraintTop_toBottomOf="@+id/path_status"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/backend_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/backend_label" />

            <TextView
                android:id="@+id/gl_mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/gl_mode_label"
                app:layout_constraintTop_toBottomOf="@+id/backend_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/gl_mode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="48dp"
                app:layout_constraintTop_toBottomOf="@+id/gl_mode_label" />

            <TextView
                android:id="@+id/debug_log_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/debug_log_label"
                app:layout_constraintTop_toBottomOf="@+id/gl_mode_spinner"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/debug_log_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:layout_constraintTop_toBottomOf="@+id/debug_log_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/debug_log_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/debug_log_hint"
                app:layout_constraintTop_toBottomOf="@+id/debug_log_switch" />

            <TextView
                android:id="@+id/config_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/config_hint"
                app:layout_constraintTop_toBottomOf="@+id/debug_log_hint"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/access_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/grant_fcl_access"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
